ci(analysis): update cache key to use github sha
- change cache key from package-lock.json hash to github sha for more precise caching
- ensure cache invalidation on every commit rather than only when dependencies change

--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -50,7 +50,7 @@ jobs:
             ${{ steps.npm-global.outputs.dir }}
             ~/.claude
             ~/.claude.json
-          key: ${{ runner.os }}-claude-cli-npm-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-claude-cli-npm-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-claude-cli-npm-
 
