--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -25,7 +25,7 @@ jobs:
     env:
       PYTHONIOENCODING: utf-8
     steps:
-      - name: set beijing timezone
+      - name: Set beijing timezone
         uses: szenius/set-timezone@v2.0
         with:
           timezoneWindows: "China Standard Time"
@@ -33,10 +33,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      - name: Use Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: '20'
+          node-version-file: .nvmrc
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: .python-version
 
       - name: Get npm global directory
         id: npm-global
@@ -73,8 +83,8 @@ jobs:
           claude --version
           claude mcp list
           # Run analysis
-          echo "执行 AI 分析..."
           echo "Custom Prompt: ${{ inputs.custom_prompt || '-' }}"
+          echo "执行 AI 分析..."
           claude -p "${{ inputs.custom_prompt || '分析A股市场总结投资建议推送到飞书机器人'}}"
         env:
           # Claude API
