ci(analysis): add claude doctor command for health check
- 在分析工作流中添加 claude doctor 命令
- 确保 Claude MCP 配置正确性
- 提高工作流稳定性

--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -81,6 +81,7 @@ jobs:
           echo "设置 Claude MCP..."
           cp .mcp.example.json .mcp.json
           claude --version
+          claude doctor
           claude mcp list
           # Run analysis
           echo "Custom Prompt: ${{ inputs.custom_prompt || '-' }}"
