fix(ci): skip permissions check in claude analysis step
- 添加 --dangerously-skip-permissions 参数以绕过权限检查
- 确保 CI 流程在受限环境中正常执行 AI 分析任务

--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -85,7 +85,7 @@ jobs:
           # Run analysis
           echo "Custom Prompt: ${{ inputs.custom_prompt || '-' }}"
           echo "执行 AI 分析..."
-          claude -p "${{ inputs.custom_prompt || '分析A股市场总结投资建议推送到飞书机器人'}}"
+          claude --dangerously-skip-permissions -p "${{ inputs.custom_prompt || '分析A股市场总结投资建议推送到飞书机器人'}}"
         env:
           # Claude API
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
