--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -98,8 +98,8 @@ jobs:
           claude mcp list
 
           # Run analysis
+          echo "=== 执行 AI 分析... ==="
           echo "Custom Prompt: ${CUSTOM_PROMPT:-NONE}"
-          echo "执行 AI 分析..."
 
           if [ -z "$CUSTOM_PROMPT" ]; then
             PROMPT="请使用工具执行以下对股市的分析：
@@ -112,14 +112,14 @@ jobs:
           然后将分析结果推送到飞书机器人，格式如下：
 
           📊 A股市场分析报告
-          ⏰ 时间：{当前时间}
+          ⏰ 时间：{当前北京时间}
 
           一、市场概况
           • 上证指数：{指数} ({涨跌幅}%)
           • 深证成指：{指数} ({涨跌幅}%)
           • 创业板指：{指数} ({涨跌幅}%)
 
-          {基于数据的智能分析}
+          {概况分析：基于数据的智能分析}
 
           二、市场情绪
           • 涨停家数：{数量}家
@@ -136,10 +136,10 @@ jobs:
           {基于数据的智能分析}
 
           五、投资建议
-          {操作建议：基于数据的智能分析包括重点推荐方向、操作建议、风险提醒}
+          {操作建议：基于数据的智能分析包括重点推荐方向、操作建议、风险提醒等}
 
           ---
-          💡 本报告由AI自动生成，仅供参考"
+          💡 本报告由AI自动生成，仅供参考 {提供数据分析来源如有}"
           else
             PROMPT="$CUSTOM_PROMPT"
           fi
