chore(ci): update analysis workflow report format - change chart emoji from 📊 to 📈 for A股市场分析报告 title - reorder data source and disclaimer information in report footer - adjust message template structure for better readability

--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -111,7 +111,7 @@ jobs:
 
           然后将分析结果推送到飞书机器人，格式如下：
 
-          📊 A股市场分析报告
+          📈 A股市场分析报告
           ⏰ 时间：{当前北京时间}
 
           一、市场概况
@@ -139,7 +139,8 @@ jobs:
           {操作建议：基于数据的智能分析包括重点推荐方向、操作建议、风险提醒等}
 
           ---
-          💡 本报告由AI自动生成，仅供参考 {提供数据分析来源如有}"
+          📊 {提供数据分析来源}
+          💡 本报告由AI自动生成，仅供参考
           else
             PROMPT="$CUSTOM_PROMPT"
           fi
