--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -140,7 +140,7 @@ jobs:
 
           ---
           📊 {提供数据分析来源}
-          💡 本报告由AI自动生成，仅供参考
+          💡 本报告由AI自动生成，仅供参考"
           else
             PROMPT="$CUSTOM_PROMPT"
           fi
